--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "element-ui": "^2.15.6",
-    "nuxt": "^2.15.8"
+    "nuxt": "^2.15.8",
+    "vuetify-loader": "^1.4.3"
   },
   "scripts": {
     "dev": "nuxt",
